// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema for almostEligibleMonthsRemaining 1`] = `
{
  "caseNotes": {
    "Education": [
      {
        "eventDate": 2021-08-16T00:00:00.000Z,
        "noteBody": "Completed coding course",
        "noteTitle": "Graduated",
      },
    ],
  },
  "eligibleCriteria": {
    "usMeCustodyLevelIsMinimumOrCommunity": {
      "custodyLevel": "COMMUNITY",
    },
    "usMeNoClassAOrBViolationFor90Days": null,
    "usMeNoDetainersWarrantsOrOther": null,
    "usMeServedXPortionOfSentence": {
      "eligibleDate": 2021-11-16T00:00:00.000Z,
      "xPortionServed": "2/3",
    },
  },
  "externalId": "RES001",
  "ineligibleCriteria": {
    "usMeXMonthsRemainingOnSentence": {
      "eligibleDate": 2022-05-16T00:00:00.000Z,
    },
  },
  "isAlmostEligible": true,
  "isEligible": false,
  "stateCode": "US_ME",
}
`;

exports[`schema for almostEligiblePendingViolation 1`] = `
{
  "caseNotes": {
    "Education": [
      {
        "eventDate": 2021-06-02T00:00:00.000Z,
        "noteBody": "Completed coding course",
        "noteTitle": "Graduated",
      },
    ],
  },
  "eligibleCriteria": {
    "usMeCustodyLevelIsMinimumOrCommunity": {
      "custodyLevel": "MINIMUM",
    },
    "usMeNoDetainersWarrantsOrOther": null,
    "usMeServedXPortionOfSentence": {
      "eligibleDate": 2021-09-16T00:00:00.000Z,
      "xPortionServed": "1/2",
    },
    "usMeXMonthsRemainingOnSentence": {
      "eligibleDate": 2021-06-16T00:00:00.000Z,
    },
  },
  "externalId": "RES007",
  "ineligibleCriteria": {
    "usMeNoClassAOrBViolationFor90Days": {
      "eligibleDate": null,
      "highestClassViol": "B",
      "violType": "Pending since 2021-09-06",
    },
  },
  "isAlmostEligible": true,
  "isEligible": false,
  "stateCode": "US_ME",
}
`;

exports[`schema for almostEligibleRecentViolation 1`] = `
{
  "caseNotes": {
    "Education": [
      {
        "eventDate": 2021-06-02T00:00:00.000Z,
        "noteBody": "Completed coding course",
        "noteTitle": "Graduated",
      },
    ],
  },
  "eligibleCriteria": {
    "usMeCustodyLevelIsMinimumOrCommunity": {
      "custodyLevel": "MINIMUM",
    },
    "usMeNoDetainersWarrantsOrOther": null,
    "usMeServedXPortionOfSentence": {
      "eligibleDate": 2021-09-16T00:00:00.000Z,
      "xPortionServed": "1/2",
    },
    "usMeXMonthsRemainingOnSentence": {
      "eligibleDate": 2021-06-16T00:00:00.000Z,
    },
  },
  "externalId": "RES003",
  "ineligibleCriteria": {
    "usMeNoClassAOrBViolationFor90Days": {
      "eligibleDate": 2022-03-02T00:00:00.000Z,
      "highestClassViol": "B",
      "violType": "More than 1",
    },
  },
  "isAlmostEligible": true,
  "isEligible": false,
  "stateCode": "US_ME",
}
`;

exports[`schema for almostEligibleXPortion 1`] = `
{
  "caseNotes": {
    "Employment Training": [
      {
        "eventDate": 2021-12-02T00:00:00.000Z,
        "noteBody": "Completed course",
        "noteTitle": "Graduated",
      },
    ],
  },
  "eligibleCriteria": {
    "usMeCustodyLevelIsMinimumOrCommunity": {
      "custodyLevel": "COMMUNITY",
    },
    "usMeNoClassAOrBViolationFor90Days": null,
    "usMeNoDetainersWarrantsOrOther": null,
    "usMeXMonthsRemainingOnSentence": {
      "eligibleDate": 2021-11-16T00:00:00.000Z,
    },
  },
  "externalId": "RES005",
  "ineligibleCriteria": {
    "usMeServedXPortionOfSentence": {
      "eligibleDate": 2022-05-16T00:00:00.000Z,
      "xPortionServed": "1/2",
    },
  },
  "isAlmostEligible": true,
  "isEligible": false,
  "stateCode": "US_ME",
}
`;

exports[`schema for eligibleToApplyBeforeXMonthsRemaining 1`] = `
{
  "caseNotes": {
    "Employment Training": [
      {
        "eventDate": 2021-12-02T00:00:00.000Z,
        "noteBody": "Completed course",
        "noteTitle": "Graduated",
      },
    ],
  },
  "eligibleCriteria": {
    "usMeCustodyLevelIsMinimumOrCommunity": {
      "custodyLevel": "MINIMUM",
    },
    "usMeNoClassAOrBViolationFor90Days": null,
    "usMeNoDetainersWarrantsOrOther": null,
    "usMeServedXPortionOfSentence": {
      "eligibleDate": 2021-08-16T00:00:00.000Z,
      "xPortionServed": "2/3",
    },
    "usMeXMonthsRemainingOnSentence": {
      "eligibleDate": 2022-02-16T00:00:00.000Z,
    },
  },
  "externalId": "RES008",
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "stateCode": "US_ME",
}
`;

exports[`schema for eligibleToApplyBeforeXPortionServed 1`] = `
{
  "caseNotes": {
    "Employment Training": [
      {
        "eventDate": 2021-12-02T00:00:00.000Z,
        "noteBody": "Completed course",
        "noteTitle": "Graduated",
      },
    ],
  },
  "eligibleCriteria": {
    "usMeCustodyLevelIsMinimumOrCommunity": {
      "custodyLevel": "MINIMUM",
    },
    "usMeNoClassAOrBViolationFor90Days": null,
    "usMeNoDetainersWarrantsOrOther": null,
    "usMeServedXPortionOfSentence": {
      "eligibleDate": 2022-02-16T00:00:00.000Z,
      "xPortionServed": "2/3",
    },
    "usMeXMonthsRemainingOnSentence": {
      "eligibleDate": 2021-08-16T00:00:00.000Z,
    },
  },
  "externalId": "RES002",
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "stateCode": "US_ME",
}
`;

exports[`schema for fullyEligibleHalfPortion 1`] = `
{
  "caseNotes": {
    "Employment Training": [
      {
        "eventDate": 2021-12-02T00:00:00.000Z,
        "noteBody": "Completed course",
        "noteTitle": "Graduated",
      },
    ],
  },
  "eligibleCriteria": {
    "usMeCustodyLevelIsMinimumOrCommunity": {
      "custodyLevel": "COMMUNITY",
    },
    "usMeNoClassAOrBViolationFor90Days": null,
    "usMeNoDetainersWarrantsOrOther": null,
    "usMeServedXPortionOfSentence": {
      "eligibleDate": 2021-09-16T00:00:00.000Z,
      "xPortionServed": "1/2",
    },
    "usMeXMonthsRemainingOnSentence": {
      "eligibleDate": 2021-06-16T00:00:00.000Z,
    },
  },
  "externalId": "RES004",
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "stateCode": "US_ME",
}
`;

exports[`schema for fullyEligibleTwoThirdsPortion 1`] = `
{
  "caseNotes": {
    "Employment Training": [
      {
        "eventDate": 2021-12-02T00:00:00.000Z,
        "noteBody": "Completed course",
        "noteTitle": "Graduated",
      },
    ],
  },
  "eligibleCriteria": {
    "usMeCustodyLevelIsMinimumOrCommunity": {
      "custodyLevel": "COMMUNITY",
    },
    "usMeNoClassAOrBViolationFor90Days": null,
    "usMeNoDetainersWarrantsOrOther": null,
    "usMeServedXPortionOfSentence": {
      "eligibleDate": 2021-02-16T00:00:00.000Z,
      "xPortionServed": "2/3",
    },
    "usMeXMonthsRemainingOnSentence": {
      "eligibleDate": 2021-08-16T00:00:00.000Z,
    },
  },
  "externalId": "RES006",
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "stateCode": "US_ME",
}
`;

exports[`schema for ineligible 1`] = `
{
  "caseNotes": {
    "Employment Training": [
      {
        "eventDate": 2021-12-02T00:00:00.000Z,
        "noteBody": "Completed course",
        "noteTitle": "Graduated",
      },
    ],
  },
  "eligibleCriteria": {},
  "externalId": "RES999",
  "ineligibleCriteria": {
    "usMeCustodyLevelIsMinimumOrCommunity": {
      "custodyLevel": "MEDIUM",
    },
    "usMeNoClassAOrBViolationFor90Days": {
      "eligibleDate": null,
      "highestClassViol": "B",
      "violType": "Pending since 2021-09-06",
    },
    "usMeNoDetainersWarrantsOrOther": {
      "detainer": "Interstate Active Detainer",
      "detainerStartDate": 2019-12-16T00:00:00.000Z,
    },
    "usMeServedXPortionOfSentence": {
      "eligibleDate": 2022-11-16T00:00:00.000Z,
      "xPortionServed": "1/2",
    },
    "usMeXMonthsRemainingOnSentence": {
      "eligibleDate": 2022-11-16T00:00:00.000Z,
    },
  },
  "isAlmostEligible": true,
  "isEligible": false,
  "stateCode": "US_ME",
}
`;
